# RTES

./: readme.md
HWs/HW01_RTES/HW01_RTES/HW01_RTES/: _func.py  _func2.py  input.txt  inputs.txt  out1dm.txt  out1edd.txt  out1rm.txt  out2.txt  out2p.txt  outputs_ed.txt
HWs/HW02/: HW02.mlx
HWs/HW03/Q1/: New Project.pdsprj  New Project.pdsprj.HOSEINONTHEGO.hosei.workspace
HWs/HW03/Q1/Project Backups/: New Project [20240527, 11-13-31].pdsprj  New Project [20240704, 15-49-16].pdsprj  New Project [Autosaved].pdsprj
HWs/HW03/Q1/report/: گزار شبیه سازی سوال یک.docx
HWs/HW03/Q2/: MyHanoi.s  MyRSA.c  MyRSA.s  RSA.asm  RSA.c  Tower_of_Hanoi.asm  Tower_of_Hanoi.c
HWs/HW03/Q3/Simulation/: New Project.pdsprj  (+1 more)
HWs/HW03/Q4/: MyHanoi.c  a.out  report.docx
HWs/HW04/: Report.docx  news.txt
HWs/HW04/Q1/: EmbeddedGoogle.txt
HWs/HW04/Q2/remote_monitor/: CMakeLists.txt
HWs/HW04/Q2/remote_monitor/include/: hardware_monitor.h  ssh_connection.h
HWs/HW04/Q2/remote_monitor/src/: hardware_monitor.cpp  main.cpp  ssh_connection.cpp
HWs/HW04/Q3/: installnet2service.sh  intsallScrapperService.sh  net2.service  net2.sh  news.txt  scrapper.service  webscrapping.py
HWs/HW04/Q4/: PrimeSum  PrimeSum.c  debug.gdb  gdb.txt  new_run_prime_sum.exp  run_prime_sum.exp
HWs/HW4_Embedded/: PrimeSum.c
project/ESP/: main.ino
project/eventdetedtion/: main.py
project/server/WebServer/: CMakeLists.txt  audio_events_db.sql  index.html  run.service
project/server/WebServer/src/: main.cpp  temp.cpp
project/server/mqttTemp/: mqtt_to_mysql  mqtt_to_mysql.cpp
(+27 files in other folders)
